# adbmcpserver

./: .gitignore  .pre-commit-config.yaml  AI_TRAINING_METHODS.md  CONTRIBUTING.md  IMPROVEMENTS_SUMMARY.md  LICENSE  Makefile  PROJECT_STATUS.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  TUTORIAL.md  WORKFLOW_COMPARISON.md  WORKFLOW_GUIDE.md  adbmcp.py  app_workflows.yaml  config.example.yaml  mcp_config.json  mcp_configs.json  pyproject.toml  requirements.txt  run_tests.sh  setup.sh  verify_setup.sh
.agent/workflows/: instagram_notifications.md
.github/workflows/: lint.yml  test.yml
.kiro/hooks/: workflow-after-task.kiro.hook
.kiro/specs/adb-shell-command-tool/: .config.kiro  design.md  requirements.md  tasks.md
examples/: README.md  instagram_workflow_example.py  test_instagram_notifications.py  test_mcp_server.py  test_scenario.py  tool_calls.py  workflow_example.py
mcp_server/: __init__.py  adb_controller.py  app_actions.py  config.py  device_manager.py  server.py  ui_controller.py  workflow_engine.py
mcp_server/utils/: __init__.py  logging.py  text_processing.py
tests/: __init__.py  conftest.py
tests/fixtures/: mock_devices.py  sample_workflows.yaml
tests/integration/: test_workflows.py
tests/unit/: test_adb_controller.py  test_device_manager.py  test_ui_controller.py  test_workflow_engine.py
